--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -13,6 +13,8 @@ pl:
         deadline: Termin zakończenia
       rank:
         name: Nazwa stopnia
+      environment:
+        name: Nazwa hufca
     errors:
       models:
         committee:
@@ -37,6 +39,11 @@ pl:
             private_key:
               blank: musi być uzupełniony
         rank:
+          attributes:
+            name:
+              blank:
+                nie może być pusta
+        environment:
           attributes:
             name:
               blank:
@@ -124,3 +131,7 @@ pl:
   deadline_in_future: musi być odpowiednio zdefiniowany
   rank_colon: "Stopień:"
   rank: Stopień
+  edit_committee_environments: Edycja hufców
+  add_environment: Dodaj hufiec
+  environment_successfully_created: Hufiec został pomyślnie utworzony
+  environment_successfully_destroyed: Hufiec został usunięty
