--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -11,6 +11,13 @@ pl:
         environment: Środowisko
         private_key: Klucz dostępu
         deadline: Termin zakończenia
+      rank:
+        name: Nazwa stopnia
+      environment:
+        name: Nazwa hufca
+        supervisor_name: Imię i nazwisko hufcowego
+        supervisor_email: Adres email hufcowego
+        notify_supervisor: Powiadamiaj hufcowego
     errors:
       models:
         committee:
@@ -34,6 +41,16 @@ pl:
               blank: nie może być puste
             private_key:
               blank: musi być uzupełniony
+        rank:
+          attributes:
+            name:
+              blank:
+                nie może być pusta
+        environment:
+          attributes:
+            name:
+              blank:
+                nie może być pusta
 
   date:
     formats:
@@ -45,6 +62,7 @@ pl:
     one: 'uniemożliwia zapisanie formularza:'
     other: 'uniemożliwiają zapisanie formularza:'
   save: Zapisz
+  add: Dodaj
   back: Powrót
   edit: Edycja
   destroy: Usuń
@@ -60,6 +78,7 @@ pl:
   clear_from_this_computer: Wyczyść na tym komputerze
   delete: Usuń
   edit_committee: Edycja komisji
+  edit_committee_ranks: Edycja stopni
   delete_committee: Usuń komisję
   confirm_delete: Czy na pewno chcesz usunąć wybrana zasób?
   number_of_trials: "Liczba prób w systemie: %{trials_count}"
@@ -70,6 +89,9 @@ pl:
   log_in_more_info: w przeciwnym razie potrzebujesz dokładny link do swojej komisji.
   with_any_troubles: W razie problemów prosimy o kontakt
   all_committees: Wszystkie komisje
+  add_rank: Nowy stopień
+  rank_successfully_created: Pomyślnie dodano stopień
+  rank_successfully_destroyed: Pomyślnie usunięto stopień
   trials_list: Lista Prób
   meetings: Spotkania
   accept: Akceptuj
@@ -93,9 +115,11 @@ pl:
   email: "Email:"
   phone_number: "Numer telefonu:"
   supervisor: "Opiekun:"
-  environment: "Środowisko:"
+  environment_colon: "Środowisko:"
+  environment: Środowisko
   private_key_digest: "Klucz dostępu (szyfrowany):"
-  state: "Stan:"
+  state_colon: "Stan:"
+  state: Stan
   created_at: "Utworzono:"
   updated_at: "Zaktualizowano:"
   registrations: Rejestracje
@@ -110,3 +134,12 @@ pl:
   state_couldnt_be_updated: Stan nie mógł zostać zaktualizowany
   you_have_successfully_signed_out: Zostałeś poprawnie wylogowany
   deadline_in_future: musi być odpowiednio zdefiniowany
+  rank_colon: "Stopień:"
+  rank: Stopień
+  edit_committee_environments: Edycja hufców
+  add_environment: Dodaj hufiec
+  environment_successfully_created: Hufiec został pomyślnie utworzony
+  environment_successfully_updated: Hufiec został pomyślnie zaktualizowany
+  environment_successfully_destroyed: Hufiec został usunięty
+  notify_supervisor: Powiadamiaj hufcowego
+  no_supervisor: Brak hufcowego
