add zaki specific states to organization with logic
overdue_state_id - trial automatically goes to this state if deadline is
passed and this state is reachable
positive_finish_state_id, negative_finish_state_id - constraints accept
/ reject buttons
stateman state resource class fixes
set state logic moved to model (fix!)
committee cached in instance variable (trial model)
fix committee error explanation

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -3,6 +3,9 @@ pl:
     attributes:
       committee:
         name: Nazwa
+        overdue_state_id: Stan przeterminowania próby
+        positive_finish_state_id: Stan pozytywnego zakończenia próby
+        negative_finish_state_id: Stan negatywnego zakończenia próby
       trial:
         title: Tytuł
         email: Email
