adds mechanism&buttons for show/download pdf trial

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -214,3 +214,5 @@ pl:
   zhr: Związek Harcerstwa Rzeczypospolitej
   info: Informacje
   generated_at: "wygenerowano:"
+  trial_as_pdf: Otwórz pdf próby
+  trial_download_pdf: Pobierz pdf próby
