--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -211,6 +211,7 @@ pl:
   clear_drive_tooltip: Usuwa folder z systemu, dalej będzie dostępny z google drive'a
   edit_states: Edycja stanów
   no_trials_found: Nie odnaleziono prób, dodaj nową lub otwórz link z wiadomości email.
+  no_tasks_yet: Nie ma jeszcze żadnych zadań - dodaj jakieś!
   zhr: Związek Harcerstwa Rzeczypospolitej
   info: Informacje
   generated_at: "wygenerowano:"
