--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -223,3 +223,8 @@ pl:
   trial_changes: zobacz poprzednie wersje
   versions: wersje
   trial_contain_pendings: Próba zawiera niezatwierdzone zmiany.
+  no_changes: Brak zmian
+  candidate_change_at: Zmiana kandydata, %{at}
+  changes_accepted: Zmiany zostały zaakceptowane
+  accept_all_changes: Akceptuj wszystko
+  confirm_versions_delete: Czy na pewno chcesz zatwierdzić wszystkie zmiany w podstawowych informacja o próbie i w zadaniach? Ta operacja jest nieodwracalna.
