improves user flow on add first task (js help)

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -280,3 +280,4 @@ pl:
   formal_condition_acceptance: Oświadczam, że spełniam warunki formalne, wymagane przy otwarciu stopnia.
   formal_conditions: Warunki formalne
   confirmation: Potwierdzenie
+  click_to_add_task: Kliknij tutaj <br> aby dodać swoje <br> pierwsze zadanie
