general fixes and adjustments to formsub#12
adds message to pending trial in permitted trials get, improves trial
referer (on validation), adjust to no meeting in registration
(registration deleted), fix scroll to tasks (even when some tasks are
created)

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -221,6 +221,7 @@ pl:
   edit_states: Edycja stanów
   trial: Próba
   no_trials_found: Nie odnaleziono prób, dodaj nową lub otwórz link z wiadomości email.
+  trial_created_error: Twoja próba nie została zatwierdzona - przejdź do swojej próby, dodaj zadania i zatwierdź próbę.
   no_tasks_yet: Nie ma jeszcze żadnych zadań - dodaj jakieś!
   zhr: Związek Harcerstwa Rzeczypospolitej
   info: Informacje
@@ -281,3 +282,4 @@ pl:
   formal_conditions: Warunki formalne
   confirmation: Potwierdzenie
   click_to_add_task: Kliknij tutaj <br> aby dodać swoje <br> pierwsze zadanie
+  registration_deleted: Rejestracja została usunięta
