revent activity (comments) for committee
adds committee_id to comment with associations and display
recent activity (comments) on committee show page
adds committee id to comment in controllers

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -283,3 +283,5 @@ pl:
   confirmation: Potwierdzenie
   click_to_add_task: Kliknij tutaj <br> aby dodać swoje <br> pierwsze zadanie
   registration_deleted: Rejestracja została usunięta
+  recent_activity: Ostatnia aktywność
+  open_braces: (otwórz)
