Adds pundit, authorize committee controller+adjust

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -307,3 +307,4 @@ pl:
   registration_deleted: Rejestracja została usunięta
   recent_activity: Ostatnia aktywność
   open_braces: (otwórz)
+  not_authorized_alert: Nie masz uprawnien do tej czynności.
